<resources>
    <string name="workscreen_delete">This page and its content will be removed.</string>
    <string name="application_name">TouchWiz Home</string>
    <string name="activity_not_found">Application is not installed</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Tap and hold a widget to move it.</string>
    <string name="market">Market</string>
    <string name="widget_dims_format">%1$d × %2$d</string>
    <string name="only_one_widget_instance_allowed">The widget has already been added to the home screen</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="remove_app_folder_title">Remove folder</string>
    <string name="remove_app_folder_message">Folder will be removed. Applications in this folder will not be uninstalled</string>
    <string name="remove_app_folder_confirm">OK</string>
    <string name="remove_app_folder_cancel">Cancel</string>
    <string name="title_wallpaper_to">Set wallpaper</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="menu_item_wallpaper_download">Download wallpapers</string>
    <string name="menu_item_wallpaper_lockscreen">Lock screen</string>
    <string name="menu_item_wallpaper_both">Home and lock screens</string>
    <string name="menu_item_wallpaper_sviewcover">S View window</string>
    <string name="menu_item_apps_and_widgets">Apps and widgets</string>
    <string name="menu_item_folder">Folder</string>
    <string name="menu_item_page">Page</string>
    <string name="menu_item_add_item_title">Home screen</string>
    <string name="menu_item_add_item">Add to home screen</string>
    <string name="out_of_space">No more room on this page</string>
    <string name="no_room_any_page">No room on any page.</string>
    <string name="shortcut_installed">Shortcut %s created</string>
    <string name="shortcut_uninstalled">Shortcut %s was removed</string>
    <string name="shortcut_duplicate">Shortcut %s already exists</string>
    <string name="widget_duplicate">Widget %s already exists</string>
    <string name="add_to_home_msg">Tap and hold an item to move it to the home screen</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="workspace_empty_message">Press and hold screen to add items.</string>
    <string name="accessibility_open_main_menu_page_edit">Open Main Menu Paged Edit</string>
    <string name="accessibility_open_home_screen_page_edit">Open Home Screen Paged Edit</string>
    <string name="accessibility_add_home_screen">Add page</string>
    <string name="accessibility_button">Button</string>
    <string name="disable_title">Disable application</string>
    <string name="disable_message" formatted="false">%s and all related features will be disabled. To enable %s again, go to Settings > Application manager.</string>
    <string name="disable_uninstall_title">Disable and reset</string>
    <string name="disable_uninstall_message">%s and all related features will be disabled. Your data will also be deleted. To enable it again, go to Settings > Application manager.</string>
    <string name="disable_uninstall_ok">OK</string>
    <string name="disable_uninstall_reset">Reset</string>
    <string name="options_menu">More options</string>
    <string name="options_menu_market">Play Store</string>
    <string name="options_menu_edit">Edit</string>
    <string name="options_menu_search">Search widgets</string>
    <string name="options_menu_uninstall">Uninstall</string>
    <string name="options_menu_disable">Uninstall/disable apps</string>
    <string name="options_menu_downloaded_apps">Downloaded apps</string>
    <string name="options_menu_view_type">View as</string>
    <string name="options_menu_share_app">Share app</string>
    <string name="options_menu_sel_apps_to_hide">Hide apps</string>
    <string name="options_menu_sel_apps_to_unhide">Show hidden apps</string>
    <string name="options_menu_sel_apps_to_enable">Show disabled apps</string>
    <string name="options_menu_galaxy_essentials">GALAXY Essentials</string>
    <string name="options_home_search">Search</string>
    <string name="options_home_edit">Edit page</string>
    <string name="options_home_settings">Settings</string>
    <string name="options_home_usm">Ultimate standby mode</string>
    <string name="options_home_add_page">Add or remove a page</string>
    <string name="options_home_add_widget">Add apps and widgets</string>
    <string name="options_home_set_wallpaper">Set wallpaper</string>
    <string name="options_home_search_via_sfinder">Search using S Finder</string>
    <string name="menu_edit_done">Done</string>
    <string name="menu_edit_save">Save</string>
    <string name="menu_edit_cancel">Cancel</string>
    <string name="menu_uninstall">Uninstall app</string>
    <string name="menu_downloaded_apps">Downloaded apps</string>
    <string name="options_menu_disableApp">Disable</string>
    <string name="homes_screen_settings">Home screen settings</string>
    <string name="transition_effect">Transition effect</string>
    <string name="transition_effect_none">None</string>
    <string name="transition_effect_1">Card stack</string>
    <string name="transition_effect_2">3D rotation</string>
    <string name="magazine_softkey_my_magazine">My Magazine</string>
    <string name="magazine_summary">View all My Magazine updates in one place on the home screen.</string>
    <string name="menu_selected">%d selected</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_navigate_up">Navigate up</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_new_page_created_toast">Page added.</string>
    <string name="menu_edit_cancel_msg">All changes will be discarded</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add shortcuts without user intervention</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove shortcuts without user intervention</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home</string>
    <string name="permlab_install_widget">install widgets</string>
    <string name="permdesc_install_widget">Allows an application to add widgets without user intervention</string>
    <string name="tap_to_install">Download widget first to use.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system application and cannot be uninstalled</string>
    <string name="folder_hint_text">Unnamed folder</string>
    <string name="folder">Folder</string>
    <string name="folder_opened">Folder opened</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_add_app">Add application</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="accessibility_check_box_checked">Ticked</string>
    <string name="accessibility_check_box_unchecked">Not ticked</string>
    <string name="uninstall_title">Uninstall application</string>
    <string name="uninstall_message">%s will be uninstalled</string>
    <string name="uninstall_confirm">Uninstall</string>
    <string name="uninstall_cancel">Cancel</string>
    <string name="viewtype_title">View as</string>
    <string name="viewtype_custom_grid">Custom</string>
    <string name="viewtype_alphabetic_grid">Alphabetical order</string>
    <string name="viewtype_alphabetic_list">Alphabetical list</string>
    <string name="viewtype_cancel">Cancel</string>
    <string name="rearrange_menu_icons_not_allowed">Unable to rearrange icons in alphabetical order.</string>
    <string name="cannot_move_folders">Cannot move folders to the apps page. Folder icon can be rearranged only in folder page.</string>
    <string name="quickview_workspace_default_page_change">Default home screen changed.</string>
    <string name="workscreen_delete_title">Remove page</string>
    <string name="quickview_menu_no_rearrange_alpha_mode">Unable to reorganize page in alphabetical grid view</string>
    <string name="quickview_menu_no_rearrange_widget_tab">Unable to reorganize page in widget tab</string>
    <string name="alphabetical_list_indicator_indexes">\#ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="package_info" formatted="false">"I recommend %s. 
Visit the links from your Android device. 
%s"</string>
    <string name="title_share_via">Share via</string>
    <string name="motion_dialog_learn_about_wave">Learn about pan</string>
    <string name="motion_dialog_explanation">Pan your device to left or right while holding icon to move it to another page</string>
    <string name="motion_dialog_turned_off">This motion is disabled</string>
    <string name="motion_dialog_turn_on_message">Use motion?</string>
    <string name="motion_dialog_do_not_ask_again">Do not ask again</string>
    <string name="motion_dialog_ok">Enable motion</string>
    <string name="motion_dialog_cancel">Cancel</string>
    <string name="motion_dialog_done">Done</string>
    <string name="airmove_dialog_learn_about_airmove">Learn about air move</string>
    <string name="airmove_dialog_text_two">Move icons to other pages by tapping and holding them and then moving your other hand left or right</string>
    <string name="airmove_dialog_text_three">Home screen</string>
    <string name="airmove_dialog_text_four">App list</string>
    <string name="airmove_dialog_text_five">S Planner (day/week view)</string>
    <string name="airmove_dialog_text_five_us">Calendar (day/week view)</string>
    <string name="airmove_dialog_enable_airmove">Enable air move</string>
    <string name="airmove_dialog_to_learn_more">To learn more, go to Settings > My device > Motions and gestures > Air gesture</string>
    <string name="airmove_dialog_ok">OK</string>
    <string name="cling_do_not_show_again">Do not show again</string>
    <string name="cling_ok">OK</string>
    <string name="home_edit_bar_create_folder_title">Create folder</string>
    <string name="home_edit_bar_create_page_title">Create page</string>
    <string name="home_edit_bar_delete_title">Remove</string>
    <string name="home_edit_bar_app_info_title">App info</string>
    <string name="home_edit_bar_hide_title">Hide</string>
    <string name="home_edit_add_to_personal">Add to personal</string>
    <string name="market_sample">This is an Engineering Sample product and is not recommended for a comprehensive quality evaluation</string>
    <string name="menu_tab_download">Downloaded apps</string>
    <string name="no_downloaded_apps">No downloaded applications</string>
    <string name="magazine_cling_message">Flick upwards from the bottom of the screen to open My Magazine</string>
    <string name="options_home_set_theme">Set theme</string>
    <string name="folder_color_blue">blue</string>
    <string name="folder_color_grey">grey</string>
    <string name="folder_color_red">red</string>
    <string name="folder_color_yellow">yellow</string>
    <string name="folder_color_green">green</string>
</resources>