<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/tw_menu_icon_playstore" android:id="@id/options_menu_market" android:title="@string/options_menu_market" />
    <item android:icon="@drawable/tw_menu_icon_edit" android:id="@id/options_menu_edit" android:title="@string/options_menu_edit" />
    <item android:icon="@drawable/tw_menu_icon_add_widget" android:id="@id/options_home_add_widget" android:title="@string/options_home_add_widget" />
    <item android:icon="@drawable/tw_menu_icon_add_folder" android:id="@id/options_home_createfolder" android:title="@string/home_edit_bar_create_folder_title" />
    <item android:icon="@drawable/tw_menu_icon_set_wallpaper" android:id="@id/options_home_set_wallpaper" android:title="@string/options_home_set_wallpaper" />
    <item android:icon="@drawable/tw_menu_icon_theme" android:id="@id/options_home_set_theme" android:title="@string/options_home_set_theme" />
    <item android:icon="@drawable/tw_menu_icon_edit" android:id="@id/options_home_edit" android:title="@string/options_home_edit" />
    <item android:icon="@drawable/tw_menu_icon_search" android:id="@id/options_home_search_via_sfinder" android:title="@string/options_home_search_via_sfinder" />
    <item android:icon="@drawable/tw_menu_icon_search" android:id="@id/options_menu_search" android:title="@string/options_menu_search" />
    <item android:icon="@drawable/tw_menu_icon_viewtype" android:id="@id/options_menu_view_type" android:title="@string/options_menu_view_type" />
    <item android:icon="@drawable/tw_menu_icon_download" android:id="@id/options_menu_downloaded_apps" android:title="@string/options_menu_downloaded_apps" />
    <item android:icon="@drawable/tw_menu_icon_uninstall" android:id="@id/options_menu_uninstall" android:title="@string/options_menu_uninstall" />
    <item android:icon="@drawable/tw_menu_icon_share" android:id="@id/options_menu_share_app" android:title="@string/options_menu_share_app" />
    <item android:icon="@drawable/tw_menu_icon_hidden" android:id="@id/options_menu_sel_apps_to_hide" android:title="@string/options_menu_sel_apps_to_hide" />
    <item android:icon="@drawable/tw_menu_icon_showhidden" android:id="@id/options_menu_sel_apps_to_enable" android:title="@string/options_menu_sel_apps_to_enable" />
    <item android:icon="@drawable/tw_menu_icon_showhidden" android:id="@id/options_menu_sel_apps_to_unhide" android:title="@string/options_menu_sel_apps_to_unhide" />
    <item android:icon="@drawable/tw_menu_icon_add_page" android:id="@id/options_home_add_page" android:visible="false" android:orderInCategory="2" android:title="@string/options_home_add_page" />
    <item android:icon="@drawable/tw_menu_icon_search" android:id="@id/options_home_search" android:orderInCategory="3" android:title="@string/options_home_search" />
    <item android:icon="@drawable/tw_menu_icon_usm" android:id="@id/options_home_usm" android:visible="false" android:orderInCategory="4" android:title="@string/options_home_usm" />
    <item android:icon="@drawable/tw_menu_icon_setting" android:id="@id/options_home_settings" android:orderInCategory="5" android:title="@string/options_home_settings" />
    <item android:icon="@drawable/tw_menu_icon_help" android:id="@id/options_home_help" android:orderInCategory="6" android:title="@string/menu_help" />
    <item android:icon="@drawable/tw_menu_icon_add_widget" android:id="@id/options_menu_galaxy_essentials" android:title="@string/options_menu_galaxy_essentials" />
</menu>