<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/magazine_cling_message_popup" android:background="@drawable/help_popup_picker_bg_w_01" android:paddingLeft="@dimen/magazine_cling_message_padding_left" android:paddingTop="@dimen/magazine_cling_message_padding_top" android:paddingRight="@dimen/magazine_cling_message_padding_right" android:paddingBottom="@dimen/magazine_cling_message_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/magazine_cling_message_margin_top" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/magazine_cling_message_text_size" android:textColor="@android:color/black" android:id="@id/magazine_cling_message_text" android:paddingLeft="@dimen/magazine_cling_message_text_padding_left" android:paddingRight="@dimen/magazine_cling_message_text_padding_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/magazine_cling_message_text_margin_bottom" android:maxWidth="@dimen/magazine_cling_message_text_max_width" android:text="@string/magazine_cling_message" />
        <LinearLayout android:id="@id/magazine_cling_message_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/magazine_cling_message_checkbox_margin_bottom" android:layout_below="@id/magazine_cling_message_text">
            <CheckBox android:id="@id/magazine_cling_message_checkbox_check" android:paddingLeft="@dimen/magazine_cling_message_checkbox_padding_left" android:paddingRight="@dimen/magazine_cling_message_checkbox_padding_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:button="@drawable/magazine_cling_checkbox_button" />
            <TextView android:textSize="@dimen/magazine_cling_message_text_size" android:textColor="@android:color/black" android:id="@id/magazine_cling_message_checkbox_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cling_do_not_show_again" />
        </LinearLayout>
        <Button android:textSize="@dimen/magazine_cling_message_button_text_size" android:textColor="#ffffffff" android:id="@id/magazine_cling_message_button_help" android:background="@drawable/magazine_cling_ok_button" android:layout_width="@dimen/magazine_cling_message_buttonm_width" android:layout_height="@dimen/magazine_cling_message_buttonm_height" android:layout_marginRight="@dimen/magazine_cling_message_text_padding_right" android:text="@string/menu_help" android:layout_below="@id/magazine_cling_message_checkbox" />
        <Button android:textSize="@dimen/magazine_cling_message_button_text_size" android:textColor="#ffffffff" android:id="@id/magazine_cling_message_button_ok" android:background="@drawable/magazine_cling_ok_button" android:layout_width="@dimen/magazine_cling_message_buttonm_width" android:layout_height="@dimen/magazine_cling_message_buttonm_height" android:layout_marginLeft="@dimen/magazine_cling_message_text_padding_left" android:text="@string/cling_ok" android:layout_toRightOf="@id/magazine_cling_message_button_help" android:layout_below="@id/magazine_cling_message_checkbox" />
    </RelativeLayout>
    <ImageView android:id="@id/magazine_cling_up_pointer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/magazine_cling_up_pointer_margin_top" android:src="@drawable/help_popup_picker_b_c" android:layout_below="@id/magazine_cling_message_popup" android:layout_centerHorizontal="true" />
    <FrameLayout android:id="@id/help_start_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <ImageView android:layout_gravity="bottom|center" android:id="@id/help_start_now_01" android:background="@anim/help_start_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/help_start_now_01_margin_bottom" />
        <ImageView android:layout_gravity="bottom|center" android:id="@id/help_start_now_02" android:background="@anim/help_start_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/help_start_now_02_margin_bottom" />
        <ImageView android:layout_gravity="bottom|center" android:id="@id/help_start_now_03" android:background="@anim/help_start_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/help_start_now_03_margin_bottom" />
    </FrameLayout>
</RelativeLayout>